	- Fix bug in ntfs_external_attr_find(). (Szakacsits Szabolcs)
	- Fix stupid logic inversion bug in ntfs_extent_inode_open(). Same bug
	  was fixed in the NTFS kernel driver over six months ago but the fix
	  was never taken over to libntfs. (Szakacsits Szabolcs)
	- Fix stupid bug in ntfs_ucsncmp(). Spotted by Leonard Norrgard.

12/03/2002 - 1.6.0 - More mkntfs options and cleanups.
	Fix typo in usage information of mkntfs. Thanks to Richard Russon for
	spotting it.
	Change version number in mkntfs and ntfsfix to match the linux-ntfs
	release version number.
	Added two new options to mkntfs; -I, which disables content indexing
	on the volume and -C, which enables compression on the volume.

01/02/2002 - Attempt to fix compile warnings on powerpc.
	Attempt to fix compile warnings on powerpc. It seems powerpc uses
	char == unsigned char which was breaking some signed comparisons.

26/01/2002 - 1.5.1 - Fix two buglets in ntfsfix and more compilation fixes.
	Fix two silly buglets in ntfsfix, where we were calling is_baad_record
	instead of is_baad_recordp. Silly me... Thanks to David Martinez Moreno
	for reporting the compilation warnings on ia64 which led me to find the
	bug.
	Fix compilation problems in logfile.h on big endian arches. Hopefully,
	now will really compile on all arches.

10/01/2002 - 1.5.0 - Fix bug in $LogFile size calculation.
	Fix bug in $LogFile size calculation where we would take the size to
	be zero on partitions between 200 and 400MiB in size.
	Add requirement for linux-ntfs to linux-ntfs-devel.

15/12/2001 - Remove atomic ops and add compiler version check.
	Hopefully this will preempt "it doesn't compile for me" messages from
	people with gcc < 2.96.
	Change bail out error check for seek to backup boot sector to a warning
	since SuSE 7.2 + loads of stuff and 2.5.1-pre11 returns EINVAL instead
	of ENOSPC.
	Remove atomic code as it isn't defined on non-i386 arches.

06/12/2001 - Change ntfs_mount to accept second argument for mount flags.