@@ -154,6 +154,12 @@
 	  was fixed in the NTFS kernel driver over six months ago but the fix
 	  was never taken over to libntfs. (Szakacsits Szabolcs)
 	- Fix stupid bug in ntfs_ucsncmp(). Spotted by Leonard Norrgard.
+	- Fix bug where the call to ntfs_attr_{put,reinit}_search_ctx() would
+	  free the extent inode attached to the search context but leave it
+	  attached to the base inode, so this would lead to memory corruption
+	  and worse problems. Thanks to Szakacsits Szabolcs for spotting this.
+	  We now don't close extent inodes any more at all and just leave it
+	  to the closing of the base inode to dispose of all the extent inodes.
 
 12/03/2002 - 1.6.0 - More mkntfs options and cleanups.
 	Fix typo in usage information of mkntfs. Thanks to Richard Russon for
